# Ballistics-x3p-Scan-Analysis

./: README.md  compiled-path-errors.txt  debugging-Linux.txt
2019_bullet_scan_check-master/2019_bullet_scan_check-master/: README.md
2019_bullet_scan_check-master/2019_bullet_scan_check-master/R/: problem_bullets_setup.R
2019_bullet_scan_check-master/2019_bullet_scan_check-master/data/: good_bullets.csv  problem_bullets.csv
2019_bullet_scan_check-master/2019_bullet_scan_check-master/docs/: index.html  index.md  scan_examples.Rmd  scan_examples.md
Shaders/REU_ShadersTemplate/: Assembly-CSharp.csproj
Shaders/REU_ShadersTemplate/Assets/myMaterials/: Blue.mat  CoolUIAnimation.mat  GPU_GraphicsBlit.mat  Green.mat  Orange.mat  Red.mat  SineWaveOnGameObject.mat  SineWaveScreenAnimation.mat  Yellow.mat
Shaders/REU_ShadersTemplate/Assets/myScenes/: 1_CpuPerformance.unity  1_GPUPerformance.unity  2_SineWaveScreenAnimation.unity  3_SineWaveOnGameObject.unity  5_Waves.unity  x_PlayWithNormals.unity
Shaders/REU_ShadersTemplate/Assets/myScripts/: CPU_GraphicsBlitPerformance.cs  GPU_GraphicsBlitPerformance.cs  GPU_SineWave.cs  PlayWithNormals.cs  ProceduralQuadMesh.cs
Shaders/REU_ShadersTemplate/Assets/myShaders/: CoolUIAnimation.shader  GPU_GraphicsBlit.shader  SineWaveOnGameObject.shader  SineWaveScreenAnimation.shader  Test2.shader
Shaders/REU_ShadersTemplate/Assets/myTimeStepData/: Timestep.0001.txt  Timestep.0002.txt  (+13 more)
Shaders/REU_ShadersTemplate/ProjectSettings/: ProjectSettings.asset
openBin/: openBin.cpp  openBin.sln
openBin/Debug/: openBin.ilk  openBin.pch  vc141.idb
openBin/Debug/openBin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  openBin.lastbuildstate
openBin/Debug/testzipoutput/: unzipper.cpp  unzipper.h  zipper.cpp  zipper.h
openBin/Release/: openBin.iobj  openBin.ipdb
openBin/openBin/: numbers.txt  openBin.cpp  openBin.vcxproj  openBin.vcxproj.filters  testnum.txt  unzipper.cpp  zipper.cpp
openBin/openBin/Debug/: openBin.pch  vc141.idb
openBin/openBin/testzipoutput/: main.xml  md5checksum.hex
openBin_CMake/: CMakeLists.txt
openBin_CMake/include/: elzip.hpp
openBin_CMake/myBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  openBin.sln  openBin.vcxproj  openBin.vcxproj.filters
openBin_CMake/myBuild/Debug/: openBin.ilk
openBin_CMake/myBuild/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
openBin_CMake/myBuild/openBin.dir/Debug/openBin.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  openBin.lastbuildstate
openBin_CMake/src/: elzip.cpp  openBin.cpp  stdafx.cpp  unzipper.cpp
(+15 files in other folders)
